<resources>
    <string name="app_name">reservation_system</string>
    <string name="giris_label">Giriş</string>
    <string name="kayit_label">Kayıt Ol</string>
    <string name="email">Email</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="password">Şifre</string>
    <string name="telephone_number">Telefon Numarası</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="hesabınız_varmı">Zaten bir hesabınız var mı? </string>
    <string name="hizmet_alan_text">Hizmet Alan</string>
    <string name="hizmet_veren_text">Hizmet Veren</string>
    <string name="mesleginizi_seciniz_text">Mesleğinizi Seçiniz :  </string>
    <string name="hesabiniz_yok_mu">Hesabınız yok mu?</string>
    <string name="alan_bos_kalamaz">Bu alan boş kalamaz</string>
    <string name="eksik_alanlari__doldur">Eksik alanları doldurunuz</string>
    <string name="basarili">Başarılı</string>
    <string name="basarisiz">Başarısız</string>
    <string name="home">Ana Sayfa</string>
    <string name="notification">Bildirimler</string>
    <string name="profil">Profil</string>
    <string name="randevular">Randevular</string>
    <string name="hi_text">Merhaba,</string>
    <string name="hos_geldin">Hoşgeldin</string>
    <string name="search">Ara...</string>
    <string name="category">Kategori</string>
    <string name="job">Meslek</string>
    <string name="dogrulama_kodunu_onaylayiniz">E-postanıza Gönderilen Doğrulama Kodunu Onaylayınız.</string>
    <string name="dogrulama_kodu_gonderilemedi">E-postanıza doğrulama kodu gönderilemedi.</string>
    <string name="bu_hesap_onaylanmamis">Bu hesap onaylanmamış. Lütfen emailinizi kontrol ediniz.</string>
    <string name="randevu_talepleri">Randevu Talepleri</string>
    <string name="kredi_kart">Kredi Kartı</string>
    <string name="dekont">Dekont</string>
    <string name="tarih">Tarih</string>
    <string name="linke_git">Linke Git</string>
    <string name="odemesi_yapilmis_randevular">Ödemesi Yapılmış Randevular</string>
    <string name="aktif_randevular">Aktif Randevular</string>
    <string name="talep_edilen_tarih">Talep Edilen Tarih :</string>
    <string name="randevu_olustur">Randevu Oluştur</string>
    <string name="ara">Ara</string>
    <string name="randevu_linki_olustur">Randevu Linki Oluştur</string>
    <string name="randevuyu_guncelle">Randevuyu Güncelle</string>
    <string name="save">Kaydet</string>
    <string name="profil_resmini_degistir">Profil Fotoğrafını Değiştir</string>
    <string name="talep_edilen_saat">Talep Edilen Saat :</string>
    <string name="ucret">Ücret</string>
    <string name="son_odeme_tarihi">Son Ödeme Tarihini Seçiniz</string>
    <string name="randevu_tarihini_giriniz">Randevu Tarihini Seçiniz</string>
    <string name="randevu_ucretini_giriniz">Randevu Ücretini Giriniz</string>
    <string name="iban_numaranizi_giriniz">Iban Numaranızı Giriniz</string>
    <string name="randevu_saatini_seciniz">Randevu Saatini Seçiniz</string>
    <string name="sabah">Sabah</string>
    <string name="aksam">Akşam</string>
    <string name="hesap_adiniz_giriniz">Hesap Adınızı Giriniz</string>
    <string name="odeme_yap">Ödeme Yap</string>
    <string name="kart_numarasi">Kart Numarası</string>
    <string name="cvc_text">CVC</string>
    <string name="mmyy_text">MMYY</string>
    <string name="kart_numara_text">################</string>
    <string name="onayla">Onayla</string>
    <string name="toplanti_ekle">Toplantı Ekle</string>
    <string name="randevu_tarihi">Randevu Tarihi :</string>
    <string name="degerlendir">Değerlendir</string>
    <string name="kaydet">Kaydet</string>
</resources>