<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    >
    <TextView
        android:id="@+id/hi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hi_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/hi_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/hosgeldin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hos_geldin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/hi_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hosgeldin_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        >
        <FrameLayout
            android:id="@+id/search_frame_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/white"
            >
            <EditText
                android:id="@+id/search_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />
        </FrameLayout>
        <ImageButton
            android:id="@+id/search_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:tint="@color/app_green"
            android:src="@android:drawable/ic_menu_search"/>
    </LinearLayout>

    <Button
        android:id="@+id/randevu_talepleri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/randevu_talepleri"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        android:background="@drawable/round_corner"
        />
    <Button
        android:id="@+id/odemesi_yapilmis_randevular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odemesi_yapilmis_randevular"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randevu_talepleri"
        android:background="@drawable/round_corner"
        />
    <Button
        android:id="@+id/aktif_randevular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aktif_randevular"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/odemesi_yapilmis_randevular"
        android:background="@drawable/round_corner"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>