<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <TextView
                android:id="@+id/kayıt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/kayit_label"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/kayıt_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioHizmetAlan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hizmet_alan_text"
                    android:checked="false"
                    android:buttonTint="@color/app_green"
                    android:textColor="@color/app_green"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioHizmetVeren"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hizmet_veren_text"
                    android:checked="false"
                    android:textSize="20sp"
                    android:buttonTint="@color/app_green"
                    android:textColor="@color/app_green"/>
            </RadioGroup>
            <LinearLayout
                android:id="@+id/meslek_sec_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                >
            <TextView
                android:id="@+id/meslek_sec_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mesleginizi_seciniz_text"
                android:textSize="15sp"
                />
            <Spinner
                android:id="@+id/spinnerJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_spinner"
                android:popupBackground="@color/app_green"
                android:spinnerMode="dropdown"
                app:theme="@style/ThemeOverlay.AppCompat"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:popupElevation="50dp"
                android:dropDownSelector="@color/black"
                style="@style/SpinnerTheme"
                />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                android:theme="@style/TextInputLayout"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/app_green"
                app:layout_constraintTop_toBottomOf="@id/meslek_sec_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_surname"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="8dp"
                    android:autofillHints="@string/name_surname" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                android:theme="@style/TextInputLayout"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/app_green"
                app:layout_constraintTop_toBottomOf="@id/register_name_surname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="8dp"
                    android:autofillHints="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="30dp"
                app:ccp_contentColor="@color/app_green"
                app:ccp_autoDetectLanguage="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:layout_constraintTop_toBottomOf="@id/register_email"
                app:layout_constraintStart_toStartOf="parent"
                app:ccp_defaultNameCode="TR" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_tel_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/app_green"
                app:layout_constraintTop_toBottomOf="@id/register_email"
                app:layout_constraintStart_toEndOf="@id/ccp"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/telephone_number"
                    android:textColorHint="@color/app_green"
                    android:drawableStart="@drawable/mobile_icon"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp"
                    android:autofillHints="@string/telephone_number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/app_green"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/ccp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="@color/app_green"
                    android:drawableStart="@drawable/lock"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp"
                    android:autofillHints="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/round_corner"
                android:text="@string/kayit_label"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                >
            <TextView
                android:id="@+id/hesabım_var"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/underline_color"
                android:text="@string/hesabınız_varmı"
                />
            <TextView
                android:id="@+id/login_page_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:text="@string/giris_label"
                android:textColor="@color/app_green"
                />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>